--- a/public/faq.html
+++ b/public/faq.html
@@ -14,7 +14,7 @@
 		<hr/>
 		
 		<h2>How can I access the raw version of my gist?</h2>
-		<p>You can access the raw version of the gist by clicking the button with the brackets in the uppermost right corner of the gist.</p>
+		<p>You can access the raw version of the gist by clicking the button with the brackets in the uppermost right corner of the gist. The URL should be in the form of https://gist.githubusercontent.com/___STUFF___/__FILE NAME___.html.</p>
 		<img src="/1.png">
 		
 		<hr/>
@@ -25,7 +25,7 @@
 		<hr/>
 		
 		<h2>Can I use this service to host my static website?</h2>
-		<p>No one is stopping you from using Gist Preview to host your website, but <a href="https://pages.github.com/">Github Pages</a> is a much better alternative.</p>
+		<p>No one is stopping you from using Gist Preview to host your website, but <a href="https://pages.github.com/">Github Pages</a> is a much better alternative. In fact, this site is being hosted on Heroku's free tier and will probably break under heavy trafic.</p>
 		
 		<hr/>
 		
