--- a/public/home.html
+++ b/public/home.html
@@ -9,7 +9,7 @@
 	<body>
 		<a id="headerlink" href="/"><h1>Gist Preview</h1></a>
 		<form action="/preview" method="get">
-			<input id="url" type="text" name="gist_url" placeholder="Gist URL" autofocus>
+			<input id="url" type="text" name="gist_url" placeholder="Raw Gist URL" autofocus>
 		</form>
 		<a id="faq" href="/faq.html">FAQ</a>
 	</body>
